--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "4.3.19", features = ["derive"] }
 crossbeam = "0.8.2"
 libpulse-binding = "2.28.1"
 log = "0.4.19"
-slimproto = { path = "../slim-client-protocol-rs/slimproto", version = "0.1.5" }
+slimproto = { path = "/mnt/auto/henry/projects/slim-client-protocol-rs/slimproto", version = "0.1.5" }
 symphonia = { version = "0.5.3", features = ["all-codecs"] }
 
 [dependencies.simple_logger]
