--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Vibe_Player"
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"
 description = "A music player for the Logitech Media Server"
 license = "MIT"
@@ -17,7 +17,8 @@ clap = { version = "4.5.4", features = ["derive"] }
 crossbeam = "0.8.4"
 libpulse-binding = "2.28.1"
 log = "0.4.21"
-slimproto = "0.1.16"
+# slimproto = "0.1.16"
+slimproto = { path = "../slim-client-protocol-rs/slimproto/", version = "*" }
 symphonia = { version = "0.5.4", features = ["all-codecs"] }
 
 [dependencies.simple_logger]
