--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Vibe_Player"
-version = "0.2.5"
+version = "0.2.6"
 edition = "2021"
 description = "A music player for the Logitech Media Server"
 license = "MIT"
@@ -13,12 +13,11 @@ authors = ["Geoff Clements <ro2kz0@gmail.com>"]
 
 [dependencies]
 anyhow = "1.0.86"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.6", features = ["derive"] }
 crossbeam = "0.8.4"
 libpulse-binding = "2.28.1"
 log = "0.4.21"
-# slimproto = "0.1.17"
-slimproto = { path = "../slim-client-protocol-rs/slimproto/", version = "*"}
+slimproto = "0.1.17"
 symphonia = { version = "0.5.4", features = ["all-codecs"] }
 
 [dependencies.simple_logger]
