Basic cpal structure in place.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "rust-analyzer.cargo.features": [
-        "symphonia/opt-simd"
+        "symphonia/opt-simd",
+        "cpal"
     ],
+    // "rust-analyzer.cargo.noDefaultFeatures": true,
+    // "rust-analyzer.check.noDefaultFeatures": true,
 }
