--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ authors = ["Geoff Clements <ro2kz0@gmail.com>"]
 [dependencies]
 anyhow = "1.0.92"
 clap = { version = "4.5.18", features = ["derive"] }
+cpal = { version = "0.15.3", optional = true }
 crossbeam = "0.8.4"
 libpulse-binding = { version = "2.28.1", optional = true }
 log = "0.4.22"
@@ -26,8 +27,9 @@ default-features = false
 features = ["stderr", "colors"]
 
 [features]
-default = ["pulse"]
+# default = ["pulse"]
 pulse = ["dep:libpulse-binding"]
+cpal = ["dep:cpal"]
 dummy = []
 
 [[bin]]
