--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,23 +14,15 @@ authors = ["Geoff Clements <ro2kz0@gmail.com>"]
 [dependencies]
 anyhow = "1.0.92"
 clap = { version = "4.5.18", features = ["derive"] }
-cpal = { version = "0.15.3", optional = true }
 crossbeam = "0.8.4"
-libpulse-binding = { version = "2.28.1", optional = true }
+libpulse-binding = { version = "2.28.1" }
 log = "0.4.22"
+simple_logger = { version = "5.0.0", default-features = false, features = [
+    "stderr",
+    "colors",
+] }
 slimproto = "0.1.19"
 symphonia = { version = "0.5.4", features = ["all-codecs"] }
-
-[dependencies.simple_logger]
-version = "5.0.0"
-default-features = false
-features = ["stderr", "colors"]
-
-[features]
-# default = ["pulse"]
-pulse = ["dep:libpulse-binding"]
-cpal = ["dep:cpal"]
-dummy = []
 
 [[bin]]
 name = "vibe"
