--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ readme = "README.md"
 authors = ["Geoff Clements <ro2kz0@gmail.com>"]
 
 [dependencies]
-anyhow = "1.0.92"
+anyhow = "1.0.93"
 clap = { version = "4.5.18", features = ["derive"] }
 crossbeam = "0.8.4"
+hostname = "0.4.0"
 libpulse-binding = { version = "2.28.1" }
 log = "0.4.22"
 simple_logger = { version = "5.0.0", default-features = false, features = [
