--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,11 @@ readme = "README.md"
 authors = ["Geoff Clements <ro2kz0@gmail.com>"]
 
 [dependencies]
-anyhow = "1.0.93"
-clap = { version = "4.5.18", features = ["derive"] }
+anyhow = "1.0.95"
+clap = { version = "4.5.26", features = ["derive"] }
 crossbeam = "0.8.4"
 hostname = "0.4.0"
-libpulse-binding = { version = "2.28.1" }
+libpulse-binding = { version = "2.28.2" }
 log = "0.4.22"
 simple_logger = { version = "5.0.0", default-features = false, features = [
     "stderr",
@@ -24,6 +24,9 @@ simple_logger = { version = "5.0.0", default-features = false, features = [
 ] }
 slimproto = "0.1.19"
 symphonia = { version = "0.5.4", features = ["all-codecs"] }
+
+[profile.dev.package."symphonia"]
+opt-level = 3
 
 [[bin]]
 name = "vibe"
