--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ anyhow = "1.0.95"
 clap = { version = "4.5.26", features = ["derive"] }
 crossbeam = "0.8.4"
 hostname = "0.4.0"
-libpulse-binding = { version = "2.28.2" }
 log = "0.4.25"
+pulse = { package = "libpulse-binding", version = "2.28.2" }
 rodio = { version = "0.20.1", optional = true, default-features = false, features = [
     "crossbeam-channel",
 ] }
