--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ clap = { version = "4.5.26", features = ["derive"] }
 crossbeam = "0.8.4"
 hostname = "0.4.0"
 log = "0.4.25"
-pulse = { package = "libpulse-binding", version = "2.28.2" }
+pulse = { package = "libpulse-binding", version = "2.28.2", optional = true }
 rodio = { version = "0.20.1", optional = true, default-features = false, features = [
     "crossbeam-channel",
 ] }
@@ -32,6 +32,8 @@ symphonia = { version = "0.5.4", features = ["all-codecs"] }
 opt-level = 3
 
 [features]
+default = ["pulse"]
+pulse = ["dep:pulse"]
 rodio = ["dep:rodio"]
 
 [[bin]]
