Tidy some spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,29 @@
         "rodio",
         "notify"
     ],
+    "cSpell.words": [
+        "adpcm",
+        "conv",
+        "dbus",
+        "demultiplexing",
+        "Deque",
+        "devel",
+        "Emscripten",
+        "flac",
+        "Geoff",
+        "libasound",
+        "libdbus",
+        "libpulse",
+        "loglevel",
+        "Mainloop",
+        "NOFLAGS",
+        "pcmchannels",
+        "pcmsamplerate",
+        "pipewire",
+        "pulseaudio",
+        "rodio",
+        "Setname",
+        "slimproto",
+        "WASAPI"
+    ],
 }
