Trigger workflow to test it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "demultiplexing",
         "Deque",
         "devel",
+        "dtolnay",
         "Emscripten",
         "flac",
         "Geoff",
