Create release workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,10 +16,12 @@
         "flac",
         "Geoff",
         "libasound",
+        "libc",
         "libdbus",
         "libpulse",
         "loglevel",
         "Mainloop",
+        "Maxsamplerate",
         "NOFLAGS",
         "pcmchannels",
         "pcmsamplerate",
@@ -27,8 +29,11 @@
         "pulseaudio",
         "rodio",
         "Setname",
+        "sgid",
         "slimproto",
+        "softprops",
         "spdif",
+        "syncgroupid",
         "WASAPI"
     ],
 }
