--- a/resources/vibe.service
+++ b/resources/vibe.service
@@ -4,7 +4,7 @@ After=network-online.target sound.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/vibe
+ExecStart=/usr/bin/vibe
 Restart=on-failure
 
 [Install]
