--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: rustup install stable && rustup default stable
+        run: rustup install stable && rustup default stable
 
       - name: Install cargo-deb
         run: cargo install cargo-deb
