--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Rust
-        uses: rustup install stable && rustup default stable
+        run: rustup install stable && rustup default stable
 
       - uses: katyo/publish-crates@v2
         with:
