First changes for symphonia-dev-0.6

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "NOFLAGS",
         "pcmchannels",
         "pcmsamplerate",
+        "pcmsamplesize",
         "pipewire",
         "pulseaudio",
         "rodio",
