--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ authors = ["Geoff Clements <ro2kz0@gmail.com>"]
 
 [dependencies]
 anyhow = "1.0.95"
-clap = { version = "4.5.27", features = ["derive"] }
+clap = { version = "4.5.30", features = ["derive"] }
 crossbeam = "0.8.4"
 hostname = "0.4.0"
 log = "0.4.25"
-notify-rust = { version = "4.11.4", default-features = false, optional = true, features = [
+notify-rust = { version = "4.11.5", default-features = false, optional = true, features = [
     "dbus",
 ] }
 pulse = { package = "libpulse-binding", version = "2.28.2", optional = true }
@@ -29,7 +29,10 @@ simple_logger = { version = "5.0.0", default-features = false, features = [
     "colors",
 ] }
 slimproto = "0.1.20"
-symphonia = { version = "0.5.4", features = ["all-codecs"] }
+symphonia = { version = "*", git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = [
+    "all-codecs",
+    "all-formats",
+] }
 
 [profile.dev.package."symphonia"]
 opt-level = 3
