--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,15 @@ readme = "README.md"
 authors = ["Geoff Clements <ro2kz0@gmail.com>"]
 
 [dependencies]
-anyhow = "1.0.95"
-clap = { version = "4.5.27", features = ["derive"] }
+anyhow = "1.0.97"
+clap = { version = "4.5.35", features = ["derive"] }
 crossbeam = "0.8.4"
 hostname = "0.4.0"
-log = "0.4.25"
-notify-rust = { version = "4.11.4", default-features = false, optional = true, features = [
+log = "0.4.27"
+notify-rust = { version = "4.11.6", default-features = false, optional = true, features = [
     "dbus",
 ] }
-pulse = { package = "libpulse-binding", version = "2.28.2", optional = true }
+pulse = { package = "libpulse-binding", version = "2.29.0", optional = true }
 rodio = { version = "0.20.1", optional = true, default-features = false, features = [
     "crossbeam-channel",
 ] }
@@ -29,7 +29,7 @@ simple_logger = { version = "5.0.0", default-features = false, features = [
     "colors",
 ] }
 slimproto = "0.1.20"
-symphonia = { version = "0.5.4", features = ["all-codecs"] }
+symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }
 
 [profile.dev.package."symphonia"]
 opt-level = 3
