--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libpulse-dev libdbus-1-dev
 
       - name: Build Debian package
-        run: cargo deb
+        run: cargo deb --manifest-path ./Cargo.toml
 
       - name: Upload to GitHub Releases
         uses: softprops/action-gh-release@v2
