--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,11 @@ simple_logger = { version = "5.0.0", default-features = false, features = [
     "stderr",
     "colors",
 ] }
-slimproto = "0.1.23"
-symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }
+slimproto = "0.1.24"
+symphonia = { version = "*", git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = [
+    "all-codecs",
+    "all-formats",
+] }
 
 [profile.dev.package."symphonia"]
 opt-level = 3
