--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,7 @@ simple_logger = { version = "5.0.0", default-features = false, features = [
     "colors",
 ] }
 slimproto = "0.1.24"
-symphonia = { version = "*", git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = [
-    "all-codecs",
-    "all-formats",
-] }
+symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }
 
 [profile.dev.package."symphonia"]
 opt-level = 3
