Use name resolution to address server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "notify"
     ],
     "cSpell.words": [
+        "Addrs",
         "adpcm",
         "buildflags",
         "conv",
@@ -31,6 +32,7 @@
         "pipewire",
         "pulseaudio",
         "rodio",
+        "rsplitn",
         "rustup",
         "Setname",
         "sgid",
