Rebase devcontainer on ubuntu noble

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,15 +2,15 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
 	"name": "Rust",
+	
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "docker.io/ubuntu:rolling",
+	"image": "mcr.microsoft.com/devcontainers/base:noble",
+
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		"ghcr.io/devcontainers/features/rust:1": {},
-		"ghcr.io/nils-geistmann/devcontainers-features/create-remote-user:0": {
-			"passwordLessSudo": true
-		}
+		"ghcr.io/devcontainers/features/rust:1": {}
 	},
+
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -20,13 +20,17 @@
 			]
 		}
 	},
+
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
+
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "./.devcontainer/postCreateCommand.sh",
+
 	"securityOpt": [
 		"apparmor:unconfined"
 	],
+
 	"runArgs": [
 		"--network=host",
 		"--device=/dev/snd",
@@ -35,12 +39,13 @@
 		"-v",
 		"${localEnv:XDG_RUNTIME_DIR}/pulse/native:/run/user/1000/pulse/native",
 		"-v",
-		"${localEnv:HOME}/.config/pulse/cookie:/root/.config/pulse/cookie",
+		"${localEnv:HOME}/.config/pulse/cookie:/home/vscode/.config/pulse/cookie",
 		"-v",
 		"${localEnv:XDG_RUNTIME_DIR}/bus:/run/user/1000/bus",
 		"-e",
 		"DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus"
-	],
+	]
+	
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "ubuntu"
+	// "remoteUser": "root"
 }
