--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,10 @@
 				"fill-labs.dependi",
 				"streetsidesoftware.code-spell-checker",
 				"streetsidesoftware.code-spell-checker-british-english"
-			]
+			],
+			"settings": {
+				"rust-analyzer.check.command": "clippy"
+			}
 		}
 	},
 
