--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ extended-description = "A music player for the Lyrion Music Server"
 anyhow = "1.0.100"
 clap = { version = "4.5.48", features = ["derive"] }
 crossbeam = "0.8.4"
+dirs ="6.0.0"
 hostname = "0.4.1"
 log = "0.4.28"
 notify-rust = { version = "4.11.7", default-features = false, optional = true, features = [
@@ -59,6 +60,7 @@ symphonia = { version = "*", git = "https://github.com/pdeljanov/Symphonia.git",
     "all-codecs",
     "all-formats",
 ] }
+which = "8.0.0"
 
 [profile.dev.package."symphonia"]
 opt-level = 3
