--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,7 @@
 		"vscode": {
 			"extensions": [
 				"fill-labs.dependi",
+				"github.vscode-github-actions",
 				"streetsidesoftware.code-spell-checker",
 				"streetsidesoftware.code-spell-checker-british-english",
 				"tombi-toml.tombi"
