--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "rust-analyzer.cargo.features": [
-        "symphonia/opt-simd",
         "rodio",
+        "pipewire",
         "notify"
     ],
     "cSpell.words": [
