--- a/.github/workflows/feature_build.yml
+++ b/.github/workflows/feature_build.yml
@@ -15,12 +15,13 @@ jobs:
         features:
           - ""
           - "pulse"
+          - "pipewire"
           - "rodio"
-          - "notify"
+          - "pulse,pipewire"
           - "pulse,rodio"
-          - "pulse,notify"
-          - "rodio,notify"
-          - "pulse,rodio,notify"
+          - "pipewire,rodio"
+          - "pulse,pipewire,rodio"
+          - "pulse,rodio,pipewire,notify"
         no-default:
           - false
           - true
@@ -35,7 +36,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y pkg-config libpulse-dev libasound2-dev libdbus-1-dev
+        run: sudo apt-get update && sudo apt-get install -y pkg-config libpulse-dev libasound2-dev libdbus-1-dev ibpipewire-0.3-dev libspa-0.2-dev libclang-dev
 
       - name: Install Rust
         run: rustup install stable && rustup default stable
