--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,16 +43,21 @@
 	"runArgs": [
 		"--network=host",
 		"--device=/dev/snd",
-		"-e",
+		// Pulse
+		"--env",
 		"PULSE_SERVER=unix:${localEnv:XDG_RUNTIME_DIR}/pulse/native",
-		"-v",
+		"--volume",
 		"${localEnv:XDG_RUNTIME_DIR}/pulse/native:/run/user/1000/pulse/native",
-		"-v",
+		"--volume",
 		"${localEnv:HOME}/.config/pulse/cookie:/home/vscode/.config/pulse/cookie",
-		"-v",
+		// Notify
+		"--volume",
 		"${localEnv:XDG_RUNTIME_DIR}/bus:/run/user/1000/bus",
-		"-e",
-		"DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus"
+		"--env",
+		"DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus",
+		// Pipewire
+		"--volume",
+		"${localEnv:XDG_RUNTIME_DIR}/pipewire-0=/run/user/1000/pipewire-0"
 	]
 	
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
