--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -57,7 +57,7 @@
 		"DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus",
 		// Pipewire
 		"--volume",
-		"${localEnv:XDG_RUNTIME_DIR}/pipewire-0=/run/user/1000/pipewire-0"
+		"${localEnv:XDG_RUNTIME_DIR}/pipewire-0:/run/user/1000/pipewire-0"
 	]
 	
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
