--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ simple_logger = { version = "5.1.0", default-features = false, features = [
   "stderr",
 ] }
 slimproto = "0.1.25"
-symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", version = "*", features = [
+symphonia = { git = "https://github.com/GeoffClements/Symphonia.git", branch = "flac-skip", version = "*", features = [
   "all-codecs",
   "all-formats",
 ] }
