--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Vibe_Player"
-version = "0.6.0-dev-flac-skip"
+version = "0.6.0-dev"
 edition = "2021"
 description = "A music player for the Lyrion Music Server"
 readme = "README.md"
