--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,6 +40,7 @@
 		"source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached,readonly"
 	],
 
+	// These are needed to run Vibe in the devcontainer
 	"runArgs": [
 		"--network=host",
 		"--device=/dev/snd",
